# cereal-co-fullstack

./: .env  .gitignore  Cargo.toml  README.md  compose.yml  nginx.conf
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
backend/docs/bruno/Week 10-11 Fullstack/: Add Order.bru  Add Product.bru  Get Current User.bru  Get Order.bru  Get Orders By Filter.bru  Get Orders By Mail.bru  Get Product.bru  Get Products.bru  Login.bru  Logout.bru  Signup.bru  Update Product.bru  collection.bru
backend/entity/: README.md
backend/entity/src/: product.rs
backend/migration/: Cargo.toml  README.md  import_from_csv.py
backend/migration/example-data/: Cereal.csv
backend/migration/src/: lib.rs  m20241209_140447_create_product_table.rs  m20241210_075709_create_user_table.rs  m20241213_170736_create_order_tables.rs
backend/src/: main.rs  setup.rs
backend/src/api/: mod.rs
backend/src/api/v1/: api_response.rs  api_result.rs  auth.rs  mod.rs  orders.rs  products.rs
backend/src/api/v1/models/: form_order.rs  form_product.rs  mod.rs  orders.rs  products.rs  users.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/cors/: cors.rs  mod.rs
backend/src/entities/: mod.rs  order.rs  order_item.rs  prelude.rs  product.rs  user.rs
backend/src/utils/: mod.rs  pass_config.rs
docs/bruno/Week 10-11 Fullstack/: Add Product.bru  Delete Product.bru  Get Products.bru  Get Static File.bru  bruno.json
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  product.rs  user.rs
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  package.json  pnpm-lock.yaml
frontend/src/: fonts.css
frontend/src/lib/: AuthButton.svelte  Button.svelte  Cart.svelte  ClickableImage.svelte  Counter.svelte  ErrorBox.svelte  Grid.svelte  Image.svelte  InputField.svelte  ProductCard.svelte  Spacer.svelte  Table.svelte  api.ts  cart.ts
frontend/src/lib/api/: auth.ts  errors.ts  orders.ts  products.ts  utils.ts
frontend/src/lib/auth/: AuthButton.svelte  UserButton.svelte
frontend/src/lib/cart/: Cart.svelte  CartButton.svelte  CartData.ts  CartView.svelte  LocalCart.svelte.ts  cart.ts  cartStore.svelte.ts  localCartApi.ts
frontend/src/lib/generic/: BlurredOverlay.svelte  Button.svelte  ClickableImage.svelte  Counter.svelte  ErrorBox.svelte  Grid.svelte  Header.svelte  HorizontalSpacer.svelte  Image.svelte  InputField.svelte  JsonTextEditor.svelte  ListSelection.svelte  (+3 more)
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
migration/src/: lib.rs  m20241209_140447_create_product_table.rs  m20241210_075709_create_user_table.rs
src/: main.rs  setup.rs
src/api/: mod.rs
src/api/v1/: api_response.rs  api_result.rs  mod.rs  products.rs
src/auth/: jwt.rs
src/entities/: mod.rs  prelude.rs  product.rs
src/entity/: prelude.rs  product.rs  user.rs
src/utils/: mod.rs
(+46 files in other folders)
