[package]
name = "week10-11-fullstack"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

dotenv_codegen = "0.15"
serde = "1.0"
tokio = { version = "1.42", features = ["full"] }
rocket = { version = "0.5", features = ["json"] }
sqlx = { version = "*", features = ["runtime-tokio-rustls"] }
sea-orm = { version = "1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
jsonwebtoken = "9.3"
chrono = "0.4"
ring = "0.17"
hex = "0.4"
