[package]
name = "cereal_co_backend"
version = "1.0.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

dotenv_codegen = "0.15"
serde = "1.0"
tokio = { version = "1.42", features = ["full"] }
rocket = { version = "0.5", features = ["json"] }
sqlx = { version = "*", features = ["runtime-tokio-rustls"] }
sea-orm = { version = "1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
jsonwebtoken = "9.3"
chrono = "0.4"
argon2 = "0.5"
